--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ aiosignal==1.2.0
 altair==4.1.0
 anaconda==0.0.1.1
 appdirs==1.4.4
+apturl==0.5.2
 argon2-cffi==21.3.0
 argon2-cffi-bindings==21.2.0
 astor==0.8.1
@@ -13,25 +14,41 @@ backports.zoneinfo==0.2.1
 base58==2.1.1
 beautifulsoup4==4.10.0
 bleach==4.1.0
+blinker==1.4
 bs4==0.0.1
 cachetools==4.2.4
+catfish==1.4.13
+certifi==2019.11.28
 cffi==1.15.0
+chardet==3.0.4
 charset-normalizer==2.0.10
+Click==7.0
+colorama==0.4.3
+command-not-found==0.3
 conda==4.3.16
+cryptography==2.8
 cssselect==1.1.0
+cupshelpers==1.0
 cycler==0.10.0
 dataframe-image==0.1.1
+dbus-python==1.2.16
 debugpy==1.5.1
 decorator==5.1.0
+defer==1.0.6
 defusedxml==0.7.1
+distro==1.4.0
+distro-info===0.23ubuntu1
 docutils==0.17.1
+entrypoints==0.3
 fake-useragent==0.1.11
 feedparser==6.0.8
 frozenlist==1.3.0
 getFamaFrenchFactors==0.0.5
 gitdb==4.0.9
 GitPython==3.1.24
+httplib2==0.14.0
 humanfriendly==4.8
+idna==2.8
 importlib-metadata==4.8.1
 importlib-resources==5.4.0
 ipykernel==6.6.0
@@ -47,12 +64,20 @@ jupyter-core==4.9.1
 jupyterlab-pygments==0.1.2
 jupyterlab-widgets==1.0.2
 kaleido==0.2.1
+keyring==18.0.1
 kiwisolver==1.3.2
+language-selector==0.1
+launchpadlib==1.10.13
+lazr.restfulclient==0.14.2
+lazr.uri==1.0.3
+lightdm-gtk-greeter-settings==1.2.2
 lxml==4.6.3
 MarkupSafe==2.0.1
 matplotlib==3.4.3
 matplotlib-inline==0.1.3
+menulibre==2.2.1
 mistune==0.8.4
+mugshot==0.4.2
 MultiApp==1.0
 multidict==5.2.0
 multitasking==0.0.10
@@ -60,8 +85,12 @@ nbclient==0.5.9
 nbconvert==6.3.0
 nbformat==5.1.3
 nest-asyncio==1.5.4
+netifaces==0.10.4
 notebook==6.4.6
 numpy==1.21.2
+oauthlib==3.1.0
+olefile==0.46
+onboard==1.4.1
 packaging==21.3
 pandas==1.3.3
 pandas-datareader==0.10.0
@@ -69,42 +98,63 @@ pandocfilters==1.5.0
 parse==1.19.0
 parso==0.8.3
 patsy==0.5.2
+pexpect==4.6.0
 pickleshare==0.7.5
+Pillow==7.0.0
 plotly==5.5.0
 prometheus-client==0.12.0
 prompt-toolkit==3.0.24
 protobuf==3.19.1
+psutil==5.5.1
 ptyprocess==0.7.0
 pyarrow==6.0.1
+pycairo==1.16.2
 pycosat==0.6.3
 pycparser==2.21
+pycups==1.9.73
 pydeck==0.7.1
 pyee==8.2.2
 Pygments==2.10.0
+PyGObject==3.36.0
+PyJWT==1.7.1
+pymacaroons==0.13.0
 Pympler==1.0
+PyNaCl==1.3.0
 pyparsing==2.4.7
 pyppeteer==0.2.6
 pyquery==1.4.3
 pyrsistent==0.18.0
+python-apt==2.0.0+ubuntu0.20.4.6
+python-dateutil==2.7.3
+python-debian===0.1.36ubuntu1
 pytz==2021.3
 pytz-deprecation-shim==0.1.0.post0
+PyYAML==5.3.1
 pyzmq==22.3.0
+reportlab==3.5.34
 requests==2.27.1
 requests-html==0.10.0
+requests-unixsocket==0.2.0
 requirements-parser==0.2.0
 ruamel.yaml==0.17.20
 ruamel.yaml.clib==0.2.6
 scikit-learn==1.0.1
 scipy==1.7.1
 seaborn==0.11.2
+SecretStorage==2.3.1
 Send2Trash==1.8.0
 sgmllib3k==1.0.0
+sgt-launcher==0.2.5
+simplejson==3.16.0
+six==1.14.0
 sklearn==0.0
 smmap==5.0.0
 soupsieve==2.2.1
+ssh-import-id==5.10
 statistics==1.0.3.5
 statsmodels==0.13.0
 streamlit==1.4.0
+systemd-python==234
 tabulate==0.8.9
 tenacity==8.0.1
 termcolor==1.1.0
@@ -120,13 +170,21 @@ traitlets==5.1.1
 typing-extensions==4.0.1
 tzdata==2021.5
 tzlocal==4.1
+ubuntu-advantage-tools==27.5
+ubuntu-drivers-common==0.0.0
+ufw==0.36
+unattended-upgrades==0.1
+urllib3==1.25.8
 validators==0.18.2
 w3lib==1.22.0
+wadllib==1.3.3
 watchdog==2.1.6
 wcwidth==0.2.5
 webencodings==0.5.1
 websockets==9.1
 widgetsnbextension==3.5.2
+xcffib==0.8.1
+xkit==0.0.0
 yahoo-fin==0.8.9.1
 yapf==0.31.0
 yarl==1.7.2
