--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,18 @@
 getFamaFrenchFactors==0.0.5
-matplotlib==3.5.1
-numpy==1.22.2
-pandas==1.4.1
-pandas_datareader==0.10.0
+getFamaFrenchFactors==0.0.5
+matplotlib==3.1.2
+numpy==1.23.5
+numpy==1.17.4
+pandas==1.5.3
+pandas==0.25.3
+pandas_datareader==0.9.0
 python_dateutil==2.8.2
-requests==2.25.1
-scikit_learn==1.0.2
-scipy==1.8.0
-seaborn==0.11.2
-statsmodels==0.13.2
-streamlit==1.5.1
+python_dateutil==2.7.3
+Requests==2.31.0
+scikit_learn==1.3.0
+scipy==1.3.3
+seaborn==0.12.2
+statsmodels==0.14.0
+streamlit==1.24.0
 yahoo_fin==0.8.9.1
+yfinance==0.2.22
