--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 pip==23.1.2
 getFamaFrenchFactors==0.0.5
 matplotlib==3.1.2
-numpy==1.17.4
+numpy
 pandas==1.5.3
 python_dateutil==2.8.2
 Requests==2.31.0
